--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "@colyseus/core": "^0.16.14",
+    "@colyseus/redis-driver": "^0.16.1",
+    "@colyseus/redis-presence": "^0.16.1",
     "@colyseus/schema": "^3.0.31",
     "@colyseus/ws-transport": "^0.16.3",
     "@types/cookie-parser": "^1.4.8",
@@ -21,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "ioredis": "^5.6.0",
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
