--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.13.0",
     "colyseus.js": "^0.16.15",
+    "lucide": "^0.487.0",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "phaser": "^3.88.2",
     "react": "^19.0.0",
