--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.13.0",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "colyseus.js": "^0.16.15",
+    "framer-motion": "^12.6.3",
+    "lightningcss": "^1.29.3",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
@@ -18,7 +25,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.1.0",
+    "tw-animate-css": "^1.2.5",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,5 +42,6 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
